Links checked and final edits.

--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -20,7 +20,7 @@
 - [SANS' PowerShell Cheat Sheet](https://blogs.sans.org/pen-testing/files/2016/05/PowerShellCheatSheet_v41.pdf) 
 
 ## Solution
-Before we go over the solution I'd like to direct everyone's attention to the way Sparkle's running this whole laser experiment. Is there really no other option than pointing insanely intense laser beams at a snowman? I mean, what if [Jack Frost](../../#kringlecon-3-jack-frost) gets wind of this?
+Before we go over the solution I'd like to direct everyone's attention to the way Sparkle's running this whole laser experiment. Is there really no other option than pointing insanely intense laser beams at a snowman? I mean, what if [Jack Frost](../misc/interesting_ui.md#jack-frost-kringlecon-3) gets wind of this?
 
 ![Snowman experiment](../img/hints/h5/h5_snowman_experiment_no.png)
 
