--- a/docs/hints/h9.md
+++ b/docs/hints/h9.md
@@ -23,6 +23,7 @@
 </div>
 
 ## Resources
+- [Elf U Graylog server](https://graylog.elfu.org)
 - [Graylog Docs](http://docs.graylog.org/en/3.1/pages/queries.html)
 
 ## Solution
@@ -156,7 +157,7 @@ super_secret_elfu_research.pdf
 
 ![Graylog Query 10](../img/hints/h9/h9_graylog10.png)
 
-It appears our attacker used PowerShell to upload the file to Pastebin. Now that we know how the data was exfiltrated we can search for [Sysmon event ID 3](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90003) (i.e. a network connection) and the `pastebin.com` domain to retrieve the associated destination IP address.
+It appears our attacker used PowerShell to upload the file to [Pastebin](https://pastebin.com). Now that we know how the data was exfiltrated we can search for [Sysmon event ID 3](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90003) (i.e. a network connection) and the `pastebin.com` domain to retrieve the associated destination IP address.
 
 ```shell
 EventID:3 AND DestinationHostname:pastebin.com
