--- a/docs/objectives/o10.md
+++ b/docs/objectives/o10.md
@@ -86,7 +86,7 @@ Now that we've determined the initial seed value (i.e. epoch time) and replicate
 
 ![super_secure_srand](../img/objectives/o10/o10_5.png)
 
-First there's the obvious "CryptImportKey failed for DES-CBC key" comment. While a comment can contain incorrect information it's confirmed by the [6601h](https://docs.microsoft.com/en-us/windows/win32/seccrypto/alg-id) algorithm ID value (i.e. CALG_DES) which is used as input for the [`CryptImportKey`](https://docs.microsoft.com/en-us/windows/win32/api/wincrypt/nf-wincrypt-cryptimportkey) function. Our initial suspicion that DES is being used based on the 8-byte key length appears to be correct.
+First there's the obvious "CryptImportKey failed for DES-CBC key" comment. While a comment can contain incorrect information it's confirmed by the [`6601h`](https://docs.microsoft.com/en-us/windows/win32/seccrypto/alg-id) algorithm ID value (i.e. CALG_DES) which is used as input for the [`CryptImportKey`](https://docs.microsoft.com/en-us/windows/win32/api/wincrypt/nf-wincrypt-cryptimportkey) function. Our initial suspicion that DES is being used based on the 8-byte key length appears to be correct.
 
 The final piece of the puzzle is the hint that the file was encrypted on December 6, 2019, between 7pm and 9pm UTC. This gives us a 7200-second window or 7200 possible seed values starting from 1575658800 (i.e. epoch time for December 6, 2019, 7pm). We can now complete the [`decrypt_pdf.py`](../scripts.md#decrypt_pdfpy) Python script by adding the following code.
 
