--- a/docs/objectives/o12.md
+++ b/docs/objectives/o12.md
@@ -71,7 +71,7 @@ jq -j '.[] | select(.uri|contains("<")) | ."id.orig_h", "\t", .uri, "\n"' http.l
 
 ![Cross-Site Scripting](../img/objectives/o12/o12_6.png)
 
-With the XSS results we now have a total of 62 IP addresses. Not enough to cover all of the malicious traffic unfortunately. To find more IPs we need to use information from the current set and match those with other, less obvious log entries. Take a look at the User-Agent strings for the [IP addresses](../files/IPs_bad.csv) we found so far.
+With the XSS results we now have a total of 62 IP addresses. Not enough to cover all of the malicious traffic unfortunately. To find more IPs we need to use information from the current set and match those with other, less obvious log entries. Let's take a look at the User-Agent strings for the [IP addresses](../files/IPs_bad.csv) we found so far.
 
 ```shell
 cat IPs_bad.csv | cut -d$'\t' -f 1,5 | grep -vEi '.*UNION|:;.*'
