--- a/docs/objectives/o6.md
+++ b/docs/objectives/o6.md
@@ -147,7 +147,7 @@ index=main sourcetype=stoq "results{}.workers.smtp.from"="bradly buttercups <bra
 
 ![Splunk 10](../img/objectives/o6/o6_10.png)
 
-Next we extract the results array using [spath](https://docs.splunk.com/Documentation/Splunk/latest/SearchReference/Spath), loop over its items using [mvexpand](https://docs.splunk.com/Documentation/Splunk/latest/SearchReference/Mvexpand), and for each list item extract both `archivers.filedir.path` and `payload_meta.extra_data.filename` (again, using spath). To keep things clean we only show results where `archivers.filedir.path` is not an empty string.
+Next we extract the results array using [`spath`](https://docs.splunk.com/Documentation/Splunk/latest/SearchReference/Spath), loop over its items using [`mvexpand`](https://docs.splunk.com/Documentation/Splunk/latest/SearchReference/Mvexpand), and for each list item extract both `archivers.filedir.path` and `payload_meta.extra_data.filename` (again, using spath). To keep things clean we only show results where `archivers.filedir.path` is not an empty string.
 
 ```shell
 index=main sourcetype=stoq "results{}.workers.smtp.from"="bradly buttercups <bradly.buttercups@eifu.org>" 
