--- a/docs/objectives/o7.md
+++ b/docs/objectives/o7.md
@@ -28,7 +28,7 @@ Additionally, the HTML for Minty's room contains a div with a class titled `kram
 
 ![Krampus CSS](../img/objectives/o7/o7_3.png)
 
-Unlike other avatars that are low res though, `krampus.png` has quite a [high resolution](https://2019.kringlecon.com//images/avatars/elves/krampus.png) (i.e. 881 × 1950 pixels)
+Unlike other avatars which are low res though, `krampus.png` has quite a [high resolution](https://2019.kringlecon.com//images/avatars/elves/krampus.png) (i.e. 881 × 1950 pixels).
 
 ![Krampus Key](../img/objectives/o7/o7_4.png)
 
