--- a/docs/objectives/o8.md
+++ b/docs/objectives/o8.md
@@ -51,14 +51,14 @@ Next, train the TensorFlow Machine Learning model by running the [`retrain.py`](
 
 *"By default this script will use the highly accurate, but comparatively large and slow Inception V3 model architecture. It's recommended that you start with this to validate that you have gathered good training data, but if you want to deploy on resource-limited platforms, you can try the `--tfhub_module` flag with a Mobilenet model."*
 
-The default 299 x 299 image resolution used in `retrain.py` far exceeds what we need for the smaller CAPTEHA image data. A [Mobilenet model](https://research.googleblog.com/2017/06/mobilenets-open-source-models-for.html) with a smaller image size (i.e. 128 x 128) is more than enough and will, as the `retrain.py` documentation describes, give us faster speeds. Train the TensorFlow Machine Learning model using the sample images provided by Krampus and the proper Mobilenet model (i.e. 100 neurons and 128 input image size) as input.
+The default 299 x 299 image resolution used in `retrain.py` far exceeds what we need for the smaller CAPTEHA image data. A [MobileNet model](https://research.googleblog.com/2017/06/mobilenets-open-source-models-for.html) with a smaller image size (i.e. 128 x 128) is more than enough and will, as the `retrain.py` documentation describes, give us faster speeds. Train the TensorFlow Machine Learning model using the sample images provided by Krampus and the proper MobileNet model (i.e. 100 neurons and 128 input image size) as input.
 
 ```shell
  python retrain.py --image_dir ./training_images --tfhub_module \
  https://tfhub.dev/google/imagenet/mobilenet_v1_100_128/quantops/feature_vector/3
 ```
 
-Once training is complete grab all the functions and remaining code from the [`predict_images_using_trained_model.py`](https://github.com/chrisjd20/img_rec_tf_ml_demo/blob/master/predict_images_using_trained_model.py) demo script and add them to `capteha_api.py`. Be sure to update both the `input_height` and `input_width` parameters in the `read_tensor_from_image_bytes` function to match the value defined by the selected Mobilenet model as well. A few code snippets from the updated [`capteha_api.py`](../scripts.md#capteha_apipy) Python script are highlighted below. 
+Once training is complete grab all the functions and remaining code from the [`predict_images_using_trained_model.py`](https://github.com/chrisjd20/img_rec_tf_ml_demo/blob/master/predict_images_using_trained_model.py) demo script and add them to `capteha_api.py`. Be sure to update both the `input_height` and `input_width` parameters in the `read_tensor_from_image_bytes` function to match the value defined by the selected MobileNet model as well. A few code snippets from the updated [`capteha_api.py`](../scripts.md#capteha_apipy) Python script are highlighted below. 
 
 Request a CAPTEHA, store the image data, and parse out the image types we need to select.
 
