--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -23,7 +23,7 @@
 - [SQLMAP Tamper Scripts for The Win](https://pen-testing.sans.org/blog/2017/10/13/sqlmap-tamper-scripts-for-the-win)
 
 ## Solution
-Pepper hints at using blind SQLi to retrieve the scraps from the server but whipping out [sqlmap](http://sqlmap.org) won't do us much good at this point. Both the `apply.php` and `check.php` pages contain a set of custom JavaScript functions that first retrieve a token value from `validator.php`. This value is then added to the form data and submitted to the server as a way to prevent [Cross-site request forgery](https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)) (CSRF). For each request the server will first check the token and only accept the request if the token is valid.
+Pepper hints at using blind SQLi to retrieve the scraps from the server but whipping out [sqlmap](http://sqlmap.org) won't do us much good at this point. Both the `apply.php` and `check.php` pages contain a set of custom JavaScript functions that first retrieve a token value from `validator.php`. This value is then added to the form data and submitted to the server as a way to prevent [Cross-site request forgery (CSRF)](https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)). For each request the server will first check the token and only accept the request if the token is valid.
 
 ![JavaScript](../img/objectives/o9/o9_1.png)
 
