--- a/docs/objectives/o4.md
+++ b/docs/objectives/o4.md
@@ -24,7 +24,7 @@ grep command_line sysmon-data.json | grep -Evi '(powershell|net\s*use|wevtutil)'
 
 ![Search Sysmon](../img/objectives/o4/o4_1.png)
 
-MITRE ATT&CK technique [T1003](https://attack.mitre.org/techniques/T1003/) covers credential dumping and provides an overview of some of the commonly used tools. One of the ways to retrieve password hashes in a Windows domain setup is to use the Windows builtin `ntdsutil.exe` command line tool to grab a copy of the main Active Directory database file (i.e. [NTDS.dit](https://blogs.msdn.microsoft.com/servergeeks/2014/10/14/active-directory-files-and-their-functions/)), which is exactly what our attacker did.
+MITRE ATT&CK technique [T1003](https://attack.mitre.org/techniques/T1003/) covers credential dumping and provides an overview of some of the commonly used tools. One of the ways to retrieve password hashes in a Windows domain setup is to use the Windows builtin `ntdsutil.exe` command line tool to grab a copy of the main Active Directory database file (i.e. [`NTDS.dit`](https://blogs.msdn.microsoft.com/servergeeks/2014/10/14/active-directory-files-and-their-functions/)), which is exactly what our attacker did. The same information can also be found in the [EQL Threat Hunting](https://pen-testing.sans.org/blog/2019/12/10/eql-threat-hunting/) blog post which is provided as a hint.
 
 ## Answer
 Tool: `ntdsutil`
