--- a/docs/objectives/o12.md
+++ b/docs/objectives/o12.md
@@ -83,7 +83,7 @@ While not all of these jump out as suspicious, a few definitely do. The below [`
 
 ```python
 #!/usr/bin/env python3
-"""SANS Holiday Hack Challenge 2019 - Filter Out Poisoned Data Sources."""
+"""2019 SANS Holiday Hack Challenge - Filter Out Poisoned Data Sources."""
 
 
 def main():
