--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -41,7 +41,7 @@ The problem can be solved by translating the `validator.php` response data to a 
 
 ```python
 #!/usr/bin/env python3
-"""SANS Holiday Hack Challenge 2019 - Retrieve Scraps of Paper from Server."""
+"""2019 SANS Holiday Hack Challenge - Retrieve Scraps of Paper from Server."""
 import requests
 from flask import Flask, Response
 app = Flask(__name__)
