--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -29,7 +29,7 @@ Based on the hints and the keypad image we see that 1, 3, 7, and 'enter' are the
 
 ```python
 #!/usr/bin/env python3
-"""SANS Holiday Hack Challenge 2019 - Frosty Keypad."""
+"""2019 SANS Holiday Hack Challenge - Frosty Keypad."""
 import itertools
 
 
